--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.159",
+    "@mui/material": "^5.15.3",
+    "axios": "^1.6.5",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
@@ -18,6 +23,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
+    "react-tabs": "^6.0.2",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1"
   },
