--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,23 @@
+version: "3"
+
 services:
   client:
     build:
       context: client
-      # target: dev-envs
     ports:
       - 5173:5173
     stdin_open: true
-    # volumes:
-    #   - /var/run/docker.sock:/var/run/docker.sock
     restart: always
-    # networks:
-    #   - react-express
-    # depends_on:
-    #   - backend
-#   backend:
-#     restart: always
-#     build:
-#       context: backend
-#       target: dev-envs
-#     volumes:
-#       - /var/run/docker.sock:/var/run/docker.sock
-#     depends_on:
-#       - mongo
-#     networks:
-#       - express-mongo
-#       - react-express
-#     expose:
-#       - 3000
-#   mongo:
-#     restart: always
-#     image: mongo:4.2.0
-#     volumes:
-#       - ./data:/data/db
-#     networks:
-#       - express-mongo
-#     expose:
-#       - 27017
-# networks:
-#   react-express:
-#   express-mongo:
+    networks:
+      - react-express
+  server:
+    build:
+      context: server
+    ports:
+      - "5000:5000"
+    restart: always
+    networks:
+      - react-express
+
+networks:
+  react-express:
