--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -13,19 +13,23 @@ jobs:
     - name: Check Out Repo
       uses: actions/checkout@v2
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and Push Docker Image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        file: ./docker-compose.prod.yml
-        push: true
-        tags: belalmohsen/reactjs:latest
+    - name: Build with Docker Compose
+      run: docker-compose -f docker-compose.prod.yml build
+
+    - name: Tag the Docker Image
+      run: docker tag myportfolio:latest belalmohsen/reactjs:latest
+
+    - name: Push to Docker Hub
+      run: docker push belalmohsen/reactjs:latest
 
     - name: Logout from Docker Hub
       run: docker logout
