--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -8,28 +8,27 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Check Out Repo
-      uses: actions/checkout@v2
+      - name: Check Out Repo
+        uses: actions/checkout@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build with Docker Compose
-      run: docker-compose -f docker-compose.prod.yml build
+      - name: Build with Docker Compose
+        run: docker-compose -f docker-compose.prod.yml build --build-arg VITE_APP_TEMPLATE_ID=${{ secrets.VITE_APP_TEMPLATE_ID }} --build-arg VITE_APP_SERVICE_ID=${{ secrets.VITE_APP_SERVICE_ID }} --build-arg VITE_APP_PUBLIC_KEY=${{ secrets.VITE_APP_PUBLIC_KEY }} --build-arg GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
 
-    - name: Tag the Docker Image
-      run: docker tag myportfolio:latest belalmohsen/reactjs:latest
+      - name: Tag the Docker Image
+        run: docker tag myportfolio:latest belalmohsen/reactjs:latest
 
-    - name: Push to Docker Hub
-      run: docker push belalmohsen/reactjs:latest
+      - name: Push to Docker Hub
+        run: docker push belalmohsen/reactjs:latest
 
-    - name: Logout from Docker Hub
-      run: docker logout
+      - name: Logout from Docker Hub
+        run: docker logout
