--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,7 +8,7 @@ services:
         VITE_APP_TEMPLATE_ID: $VITE_APP_TEMPLATE_ID
         VITE_APP_SERVICE_ID: $VITE_APP_SERVICE_ID
         VITE_APP_PUBLIC_KEY: $VITE_APP_PUBLIC_KEY
-        GITHUB_TOKEN: $GITHUB_TOKEN
+        API_TOKEN: $API_TOKEN
     image: myportfolio:latest
     ports:
       - "5000:5000"
