--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,4 +14,8 @@ services:
       - "5000:5000"
     restart: always
     environment:
-      - NODE_ENV=production
+      VITE_APP_TEMPLATE_ID: $VITE_APP_TEMPLATE_ID
+      VITE_APP_SERVICE_ID: $VITE_APP_SERVICE_ID
+      VITE_APP_PUBLIC_KEY: $VITE_APP_PUBLIC_KEY
+      API_TOKEN: $API_TOKEN
+      NODE_ENV: production
